# EvoSim

./: .gitignore  Cost.md  GenerationSummaryConcepts.md  OGCode  README.md  index.html  inputs.md  package-lock.json  package.json  tailwind.config.js  terrain.md  time.md  vite.config.ts  weather.md  zegion.ipynb
e2e/: raf-lifecycle.spec.ts  uplot-layout.spec.ts  vision-prefs.spec.ts  vue.spec.ts
public/: bad-brains.json
scripts/: brain-smoke.mjs  merge-bad-brains.mjs
src/: App.vue  main.ts  zegion.spec.json
src/__tests__/: A11yExports.spec.ts  App.spec.ts  ExportPrefs.spec.ts  SummaryDashboard.spec.ts  Telemetry.spec.ts
src/components/: ControlPanel.vue  CostTelemetryOverlay.vue  EcosystemRenderer.vue  EventNotifications.vue  GeneralStats.vue  GenerationSummary.vue  HallOfFame.vue  ModalContainer.vue  SidePanel.vue  StatsPanel.vue
src/components/summary/: BehaviorEvents.vue  ComparisonsTrends.vue  ControlsPanel.vue  EnvironmentSummary.vue  ExportsBar.vue  GeneticsBrains.vue  HallOfFameList.vue  HeaderKpis.vue  InsightsRecommendations.vue  MovementActivity.vue  PopulationDynamics.vue  SpatialEnvironment.vue  SummaryDashboard.vue
src/composables/: useNameService.ts  useSimulationStore.ts  useUiPrefs.ts  useUserPrefs.ts
src/router/: index.ts
src/styles/: tailwind.css
src/types/: wasm-ecosim.d.ts
src/wasm/ecosim/: Cargo.toml
src/wasm/ecosim/src/: lib.rs
src/webgl/: renderer.ts
src/zegion/: README.md
src/zegion/activations/: activations.spec.ts  index.ts
src/zegion/evolution/: README.md  types.ts
src/zegion/io/: README.md  spec.ts
(+13 files in other folders)
